@@ -2,6 +2,7 @@
 
 = 2.1.0 - 2021-xx-xx =
 * Update - Show last 4 digit credit card number in order note when payment method is updated on failed renewal subscription order.
+* Update - Define constant for the group to be used for scheduled actions. 
 * Update - Enable multiple customer currencies support in live mode.
 
 = 2.0.0 - 2021-02-22 =
